# four-in-a-row

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  conanfile.txt  main.cpp
rules/: CMakeLists.txt
rules/src/: board.cpp  board.hpp  export_definition.hpp
rules/test/: unittest_board.cpp
src/: game.cpp
tools/cmake/: conan.cmake
